--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>PicPay: <strong>raquelgata380@gmail.com</strong></p>
         </div>
         <div class="contact-btn">
-            <a href="https://api.whatsapp.com/send?phone=5562992900737&text=Converse%20com%20a%20Raky%20diretamente%20%21%20Para%20realizar%20o%20pagamento%20 💬 😊3A" target="_blank">
+            <a href="https://api.whatsapp.com/send?phone=5562992900737&text=Ol%C3%A1%20Raky%2C%20gostaria%20de%20realizar%20o%20Pagamento%20de%20um%20determinado%20Pet%20do%20Adopt%20Me%20%21%20Podemos%20conversar%3F%F0%9F%92%AC%F0%9F%98%8A" target="_blank">
                 <button>Contato</button>
             </a>
         </div>
