--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <h1>Realizar o Pagamento</h1>
         <button id="showPixButton">Clique aqui para ver as chaves Pix</button>
         <div class="pix-keys" id="pixKeys">
-            <p>PagBank: <strong>62992900737</strong></p>
-            <p>Mercado Pago: <strong>raquelgata780@gmail.com</strong></p>
+            <p>Mercado Pago: <strong>raquelgata780@gmail.com  (Preferência)</strong></p>
             <p>PicPay: <strong>raquelgata380@gmail.com</strong></p>
+            <p>PagBank: <strong>62992900737</strong></p>
         </div>
         <div class="contact-btn">
             <a href="https://api.whatsapp.com/send?phone=5562992900737&text=Ol%C3%A1%20Raky%2C%20gostaria%20de%20realizar%20o%20Pagamento%20de%20um%20determinado%20Pet%20do%20Adopt%20Me%20%21%20Podemos%20conversar%3F%F0%9F%92%AC%F0%9F%98%8A" target="_blank">
